Fading effect on html, body load event to feel smooth transitioning

--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,9 @@
     
     <script>
         $(document).foundation('topbar', 'reflow');
+        $(function() {
+            $('html,body').hide().fadeIn('slow');
+        });
     </script>
   </body>
 </html>
