Clean up and added express.js authentication

--- a/src/index.html
+++ b/src/index.html
@@ -49,5 +49,9 @@
             $('html,body').hide().fadeIn('slow');
         });
     </script>
+    <script type='text/javascript' id="__bs_script__">//<![CDATA[
+    document.write("<script async src='http://HOST:3001/browser-sync/browser-sync-client.2.1.6.js'><\/script>".replace(/HOST/g, location.hostname).replace(/PORT/g, location.port));
+//]]></script>
+
   </body>
 </html>
